# MarkerEnginePlatform

./: .gitignore  Dockerfile  Makefile  README.md  TASK_0.3_SUMMARY.md  TASK_1.3_SUMMARY.md  docker-compose.dev.yml  index.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.husky/: commit-msg
engine/kb/: __init__.py  loader.py  models.py
kb/schema/: marker.schema.json
kb/sets/: ambivalenz.json  schuld.json
marker_engine/: __init__.py
tests/: test_add.py  test_placeholder.py  test_smoke.py
tests/engine/kb/: test_loader.py  test_models.py
