[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marker-engine-platform"
version = "0.1.0"
description = "Marker Engine Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["marker_engine"]
exclude = ["node_modules*"]

[tool.ruff]
line-length = 120
target-version = "py312"
# Use Ruff's recommended rules
lint.select = ["E", "F", "B", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
