[tool.poetry]
name = "marker-engine"
version = "0.1.0"
description = "Semantic Behavior Marker Analysis Engine"
authors = ["Marker Engine Team"]
readme = "README.md"
packages = [
    { include = "engine" },
    { include = "api" },
    { include = "kb" },
    { include = "client" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
websockets = "^12.0"
click = "^8.1.7"
typer = "^0.12.0"
rich = "^13.7.0"
watchdog = "^4.0.0"
nltk = "^3.8.1"
openai = "^1.12.0"
jsonschema = "^4.21.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.9.0"
ipython = "^8.22.0"
locust = "^2.24.0"

[tool.poetry.scripts]
marker-cli = "client.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["engine", "api", "kb", "client"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
